# brand_rating_analysis

./: .gitignore  README.md  pyproject.toml
app/: base_generator.py  data_processing.py  generators_reports.py  main.py  parser.py  utils.py
tests/: conftest.py  test_brand_rating_analysis.py  test_data.csv  test_students_performance.py
