[project]
name = "brand-rating-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Родион Гнутов",email = "rodion.gnutov.2000@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
